--- a/index.html
+++ b/index.html
@@ -235,13 +235,10 @@
       </div>
     </section>
 
-    <!-- RESUME -->
-    <section id="resume" class="section">
-      <h2>Résumé</h2>
-      <p class="lead">Download a one‑page PDF or view my detailed CV.</p>
+    <!-- BLOG -->
+    <section id="blog" class="section">
+      <h2 href="blog.html">blog</h2>
       <div class="grid" style="grid-template-columns:1fr 1fr; gap:16px">
-        <a class="btn" href="#" download>Download 1‑page PDF</a>
-        <a class="btn" href="#">Open detailed CV</a>
       </div>
     </section>
 
