--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <a href="#projects">Projects</a>
         <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
-        <a class="badge" href="#resume">Résumé</a>
+        <a class="badge" href="blog.html">Blog</a>
       </nav>
     </div>
   </header>
