--- a/blog.html
+++ b/blog.html
@@ -81,9 +81,13 @@
   </nav>
 
   <main>
-    <h1>Konrad’s Blog</h1>
-    <p>Quiet thoughts from the edge of the universe.<br>
-    Posts coming soon — each commit adds a new story.</p>
+    <h1>What I am currently working on</h1>
+    <p>Gaining experience in configuration and maintenance of web servers, load balancers, relational databases, storage systems and messaging systems
+<br>
+    Building large-scale applications
+<br>
+    Improving quality through thoughtful code reviews, appropriate testing, proper rollout, monitoring, and proactive changes
+    </p>
   </main>
 </body>
 </html>
