--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <section class="hero">
       <div>
         <h1 class="title" data-reveal>
-          Building <span class="gradient-text">Cloud & AI</span> products that ship — not just slide.
+          Building <span class="gradient-text">Cloud & AI</span> products by deeply understanding B2B customer's needs.
         </h1>
         <p class="subtitle" data-reveal>
           I combine strategy, engineering, and data to deliver business outcomes. Former McKinsey Digital (intern), now Microsoft Digital Solution Engineer for Cloud & AI. Fluent in <strong>DE/EN/ZH</strong>.
@@ -232,13 +232,6 @@
             <p>Migrated analytics from SAP HANA to Snowflake; enabled self‑serve analytics and multi‑user access; improved performance and UX.</p>
           </div>
         </div>
-      </div>
-    </section>
-
-    <!-- BLOG -->
-    <section id="blog" class="section">
-      <h2 href="blog.html">blog</h2>
-      <div class="grid" style="grid-template-columns:1fr 1fr; gap:16px">
       </div>
     </section>
 
