--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <section class="hero">
       <div>
         <h1 class="title" data-reveal>
-          Building <span class="gradient-text">Cloud & AI</span> products by deeply understanding B2B customer's needs.
+          With increasing commoditization of code through AI, business acumen and understanding B2B client needs matters more than ever for modern SWEs
         </h1>
         <p class="subtitle" data-reveal>
           I combine strategy, engineering, and data to deliver business outcomes. Former McKinsey Digital (intern), now Microsoft Digital Solution Engineer for Cloud & AI. Fluent in <strong>DE/EN/ZH</strong>.
