updated hero text and added brand highlights

--- a/index.html
+++ b/index.html
@@ -143,18 +143,14 @@
           <div class="kpi"><div class="n">3</div><div class="l">Languages (DE/EN/ZH)</div></div>
         </div>
       </div>
-      <div class="card" aria-label="Profile highlight" data-reveal>
-        <h2 style="margin-top:0">What I do</h2>
-        <p class="lead">Cloud architectures • AI integrations • GTM for B2B • Pricing/monetization • Data products</p>
-        <div class="divider"></div>
-        <div class="grid" style="grid-template-columns:1fr 1fr; gap:12px">
-          <div class="chip">☁️ Azure | GCP</div>
-          <div class="chip">🤖 Python | SQL</div>
-          <div class="chip">📈 Pricing & Growth</div>
-          <div class="chip">📊 Dashboards</div>
-          <div class="chip">🧩 Systems Design</div>
-          <div class="chip">🧠 LLM Apps</div>
-        </div>
+  <div class="card" aria-label="Brand highlights" data-reveal>
+    <h2 style="margin-top:0">Brands I've Worked With</h2>
+    <div class="grid" style="grid-template-columns:1fr 1fr 1fr; gap:24px; align-items:center; justify-items:center; padding:24px 0;">
+      <img src="assets/siemens.png" alt="Siemens" style="height:48px; max-width:120px;">
+      <img src="assets/mckinsey.png" alt="McKinsey & Company" style="height:48px; max-width:120px;">
+      <img src="assets/microsoft.png" alt="Microsoft" style="height:48px; max-width:120px;">
+  </div>
+</div>
       </div>
     </section>
 
