updated personal info

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Konrad – Cloud & AI Portfolio</title>
+  <title>Konrad – Portfolio</title>
   <meta name="description" content="Konrad – Cloud & AI Solutions, Product, and Strategy portfolio. Projects, experience, and ways to reach me." />
   <meta name="color-scheme" content="light dark">
   <style>
@@ -110,7 +110,6 @@
       <a class="logo" href="#top" aria-label="Home">
         <span class="dot"></span>
         <span>Konrad</span>
-        <span class="badge">Cloud & AI</span>
       </a>
       <nav class="nav-links">
         <a href="#projects">Projects</a>
@@ -144,9 +143,9 @@
         </div>
       </div>
   <div class="card" aria-label="Brand highlights" data-reveal>
-    <h2 style="margin-top:0">Brands I've Worked With</h2>
     <div class="grid" style="grid-template-columns:1fr 1fr 1fr; gap:24px; align-items:center; justify-items:center; padding:24px 0;">
       <img src="assets/siemens.png" alt="Siemens" style="height:48px; max-width:120px;">
+      <img src="assets/insead.png" alt="INSEAD" style="height:48px; max-width:120px;">
       <img src="assets/mckinsey.png" alt="McKinsey & Company" style="height:48px; max-width:120px;">
       <img src="assets/microsoft.png" alt="Microsoft" style="height:48px; max-width:120px;">
   </div>
@@ -234,19 +233,19 @@
     <!-- CONTACT -->
     <section id="contact" class="section">
       <h2>Contact</h2>
-      <p class="lead">Open to Cloud/AI engineering and PM roles in London, Zürich, Singapore.</p>
+      <p class="lead">Let's grab a (virtual) coffee together! "(:"</p>
       <div class="grid" style="grid-template-columns:repeat(3,1fr); gap:12px">
         <a class="project-card" href="mailto:you@example.com" aria-label="Email">
           <strong>✉️ Email</strong>
-          <span class="muted">you@example.com</span>
+          <span class="muted">konradkriehmig@hotmail.com</span>
         </a>
         <a class="project-card" href="#" aria-label="GitHub">
           <strong>🐙 GitHub</strong>
-          <span class="muted">github.com/yourusername</span>
+          <span class="muted">github.com/konradkriehmig</span>
         </a>
         <a class="project-card" href="#" aria-label="LinkedIn">
           <strong>🔗 LinkedIn</strong>
-          <span class="muted">linkedin.com/in/yourhandle</span>
+          <span class="muted">linkedin.com/in/konradkriehmig</span>
         </a>
       </div>
     </section>
@@ -254,7 +253,7 @@
 
   <footer class="footer">
     <div class="container">
-      © <span id="year"></span> Konrad — Built with GitHub Pages. Designed by Aneeka.
+      © <span id="year"></span> Konrad — Built with GitHub Pages. Designed by my Chatbot "(:"
     </div>
   </footer>
 
