--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <!-- CONTACT -->
     <section id="contact" class="section">
       <h2>Contact</h2>
-      <p class="lead">Let's grab a (virtual) coffee together! "(:"</p>
+      <p class="lead">Let's grab a (virtual) coffee together!</p>
       <div class="grid" style="grid-template-columns:repeat(3,1fr); gap:12px">
         <a class="project-card" href="mailto:you@example.com" aria-label="Email">
           <strong>✉️ Email</strong>
@@ -253,7 +253,7 @@
 
   <footer class="footer">
     <div class="container">
-      © <span id="year"></span> Konrad — Built with GitHub Pages. Designed by my Chatbot "(:"
+      © <span id="year"></span> Konrad — Built with GitHub Pages. Designed by my Chatbot (:
     </div>
   </footer>
 
