--- a/blog.html
+++ b/blog.html
@@ -82,7 +82,9 @@
 
   <main>
     <h1>What I am currently working on</h1>
-    <p>Gaining experience in configuration and maintenance of web servers, load balancers, relational databases, storage systems and messaging systems
+    <p>
+      Understanding Azure in all its details <br>
+      Gaining experience in configuration and maintenance of web servers, load balancers, relational databases, storage systems and messaging systems
 <br>
     Building large-scale applications
 <br>
