--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Konrad – Cloud & AI Solutions, Product, and Strategy portfolio. Projects, experience, and ways to reach me." />
   <meta name="color-scheme" content="light dark">
   <style>
+    
     :root{
       --bg: #0b0d10;
       --bg-soft:#11151b;
@@ -124,8 +125,10 @@
     <!-- HERO -->
     <section class="hero">
       <div>
-        <h1 class="title" data-reveal>
-          With increasing commoditization of code through AI, business acumen and understanding B2B client needs matters more than ever for modern SWEs
+        <h1 class="title" data-reveal>  
+           <span class="gradient-text">
+                With increasing commoditization of code through AI, business acumen and understanding B2B client needs matters more than ever for modern SWEs
+                </span>
         </h1>
         <p class="subtitle" data-reveal>
           I combine strategy, engineering, and data to deliver business outcomes. Former McKinsey Digital (intern), now Microsoft Digital Solution Engineer for Cloud & AI. Fluent in <strong>DE/EN/ZH</strong>.
@@ -142,13 +145,28 @@
           <div class="kpi"><div class="n">3</div><div class="l">Languages (DE/EN/ZH)</div></div>
         </div>
       </div>
-  <div class="card" aria-label="Brand highlights" data-reveal>
-    <div class="grid" style="grid-template-columns:1fr 1fr 1fr; gap:24px; align-items:center; justify-items:center; padding:24px 0;">
-      <img src="assets/siemens.png" alt="Siemens" style="height:48px; max-width:120px;">
-      <img src="assets/insead.png" alt="INSEAD" style="height:48px; max-width:120px;">
-      <img src="assets/mckinsey.png" alt="McKinsey & Company" style="height:48px; max-width:120px;">
-      <img src="assets/microsoft.png" alt="Microsoft" style="height:48px; max-width:120px;">
+<div class="card" aria-label="Brand highlights" data-reveal>
+  <h2 style="text-align:center; font-size:1.5rem; font-weight:600; margin-bottom:16px;">
+    Corporate exposure
+  </h2>
+
+  <div
+    class="grid"
+    style="
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 24px;
+      align-items: center;
+      justify-items: center;
+      padding: 24px 0;
+    "
+  >
+    <img src="assets/siemens.png" alt="Siemens" style="max-height:48px; width:auto; max-width:120px;">
+    <img src="assets/mck.png" alt="McKinsey & Company" style="max-height:48px; width:auto; max-width:120px;">
+    <img src="assets/ms.png" alt="Microsoft" style="max-height:48px; width:auto; max-width:120px;">
   </div>
+</div>
+
 </div>
       </div>
     </section>
@@ -248,6 +266,10 @@
           <span class="muted">linkedin.com/in/konradkriehmig</span>
         </a>
       </div>
+    </section>
+    <section id="values" class="section">
+      <h2>Values</h2>
+      <p class="lead">Integrity - Health - Dedication - Diligence - Composure</p>
     </section>
   </main>
 
