--- a/index.html
+++ b/index.html
@@ -131,19 +131,14 @@
                 </span>
         </h1>
         <p class="subtitle" data-reveal>
-          I combine strategy, engineering, and data to deliver business outcomes. Former McKinsey Digital (intern), now Microsoft Digital Solution Engineer for Cloud & AI. Fluent in <strong>DE/EN/ZH</strong>.
+          I combine strategy, engineering, and data to deliver business outcomes. Former data engineer at Siemens and consultant intern at McKinsey, now Microsoft Digital Solution Engineer for Cloud & AI. Fluent in <strong>DE/EN/ZH</strong>.
         </p>
         <div class="cta-row" data-reveal>
           <a class="btn primary" href="#projects" aria-label="View Projects">View Projects →</a>
           <a class="btn" href="#contact" aria-label="Contact Konrad">Contact</a>
           <a class="btn" href="#resume" aria-label="Resume">Résumé</a>
         </div>
-        <div class="kpis" data-reveal>
-          <div class="kpi"><div class="n">7+</div><div class="l">Markets analyzed (APAC/EU)</div></div>
-          <div class="kpi"><div class="n">10x</div><div class="l">Dashboard adoption uplift</div></div>
-          <div class="kpi"><div class="n">€3–5M</div><div class="l">Account sizes supported</div></div>
-          <div class="kpi"><div class="n">3</div><div class="l">Languages (DE/EN/ZH)</div></div>
-        </div>
+
       </div>
 <div class="card" aria-label="Brand highlights" data-reveal>
   <h2 style="text-align:center; font-size:1.5rem; font-weight:600; margin-bottom:16px;">
@@ -161,11 +156,18 @@
       padding: 24px 0;
     "
   >
-    <img src="assets/siemens.png" alt="Siemens" style="max-height:48px; width:auto; max-width:120px;">
-    <img src="assets/mck.png" alt="McKinsey & Company" style="max-height:48px; width:auto; max-width:120px;">
-    <img src="assets/ms.png" alt="Microsoft" style="max-height:48px; width:auto; max-width:120px;">
+  <img src="assets/ms.png" alt="Microsoft" style="max-height:48px; width:auto; max-width:120px;">
+  <img src="assets/mck.png" alt="McKinsey & Company" style="max-height:48px; width:auto; max-width:120px;">
+  <img src="assets/siemens.png" alt="Siemens" style="max-height:48px; width:auto; max-width:120px;">
   </div>
 </div>
+
+        <div class="kpis" data-reveal>
+          <div class="kpi"><div class="n">7+</div><div class="l">Markets analyzed (APAC/EU)</div></div>
+          <div class="kpi"><div class="n">10x</div><div class="l">Dashboard adoption uplift</div></div>
+          <div class="kpi"><div class="n">€3–5M</div><div class="l">Account sizes supported</div></div>
+          <div class="kpi"><div class="n">3</div><div class="l">Languages (DE/EN/ZH)</div></div>
+        </div>
 
 </div>
       </div>
@@ -224,7 +226,7 @@
         <div class="exp-item" data-reveal>
           <div class="exp-logo" aria-hidden="true">McK</div>
           <div>
-            <h3>Intern – McKinsey Digital</h3>
+            <h3>Intern – McKinsey</h3>
             <div class="meta">Munich · 2025</div>
             <p>Built dashboards, quantified value, and supported procurement/value‑prop workstreams for an automotive supplier. Standardized GTM collateral.</p>
           </div>
