--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </span>
         </h1>
         <p class="subtitle" data-reveal>
-          I combine strategy, engineering, and data to deliver business outcomes. Former data engineer at Siemens and consultant intern at McKinsey, now Microsoft Digital Solution Engineer for Cloud & AI. Fluent in <strong>DE/EN/ZH</strong>.
+          I combine strategy, engineering, and data to deliver business outcomes. Former data engineer at Siemens and consultant intern at McKinsey, now Microsoft Digital Solution Engineer for Cloud & AI. Fluent in German, English, and Chinese.
         </p>
         <div class="cta-row" data-reveal>
           <a class="btn primary" href="#projects" aria-label="View Projects">View Projects →</a>
@@ -157,7 +157,9 @@
     "
   >
   <img src="assets/ms.png" alt="Microsoft" style="max-height:48px; width:auto; max-width:120px;">
-  <img src="assets/mck.png" alt="McKinsey & Company" style="max-height:48px; width:auto; max-width:120px;">
+  <!-- ...existing code... -->
+  <img src="assets/mckinsey.svg" alt="McKinsey & Company" style="height:24px; width:auto; max-width:90px; display:block; filter: brightness(0) invert(1);">
+  <!-- ...existing code... -->
   <img src="assets/siemens.png" alt="Siemens" style="max-height:48px; width:auto; max-width:120px;">
   </div>
 </div>
@@ -166,7 +168,7 @@
           <div class="kpi"><div class="n">7+</div><div class="l">Markets analyzed (APAC/EU)</div></div>
           <div class="kpi"><div class="n">10x</div><div class="l">Dashboard adoption uplift</div></div>
           <div class="kpi"><div class="n">€3–5M</div><div class="l">Account sizes supported</div></div>
-          <div class="kpi"><div class="n">3</div><div class="l">Languages (DE/EN/ZH)</div></div>
+          <div class="kpi"><div class="n">3</div><div class="l">Languages</div></div>
         </div>
 
 </div>
@@ -216,15 +218,19 @@
       <h2>Experience</h2>
       <div class="grid exp">
         <div class="exp-item" data-reveal>
-          <div class="exp-logo" aria-hidden="true">MS</div>
+          <div class="exp-logo" aria-hidden="true">
+            <img src="assets/Microsoft_icon.svg.png" alt="Microsoft" style="width:36px; height:36px; border-radius:8px;">
+          </div>
           <div>
-            <h3>Digital Solution Engineer – Cloud & AI</h3>
+            <h3>Cloud and AI solution engineer</h3>
             <div class="meta">Microsoft · Dublin · 2025—Present</div>
             <p>Pre‑sales architecture and solutioning for mid‑market DACH. Focus on Azure AI/ML, data platforms, and automation to drive revenue and retention.</p>
           </div>
         </div>
         <div class="exp-item" data-reveal>
-          <div class="exp-logo" aria-hidden="true">McK</div>
+          <div class="exp-logo" aria-hidden="true">
+            <img src="assets/mck_icon.png" alt="McK_icon" style="width:36px; height:36px; border-radius:8px;">
+          </div>
           <div>
             <h3>Intern – McKinsey</h3>
             <div class="meta">Munich · 2025</div>
@@ -232,7 +238,9 @@
           </div>
         </div>
         <div class="exp-item" data-reveal>
-          <div class="exp-logo" aria-hidden="true">SG</div>
+          <div class="exp-logo" aria-hidden="true">
+            <img src="assets/siemens_icon.jpeg" alt="siemens_icon" style="width:36px; height:36px; border-radius:8px;">
+          </div>
           <div>
             <h3>Strategy & Market Intelligence</h3>
             <div class="meta">Siemens · APAC · 2023–2024</div>
@@ -240,7 +248,9 @@
           </div>
         </div>
         <div class="exp-item" data-reveal>
-          <div class="exp-logo" aria-hidden="true">DE</div>
+          <div class="exp-logo" aria-hidden="true">
+            <img src="assets/siemens_icon.jpeg" alt="siemens_icon" style="width:36px; height:36px; border-radius:8px;">
+          </div>
           <div>
             <h3>Data Engineer</h3>
             <div class="meta">Siemens · Germany · 2023</div>
