--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0; font:16px/1.6 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, "Helvetica Neue", Arial, "Apple Color Emoji","Segoe UI Emoji";
-      color:var(--text); background:radial-gradient(80rem 80rem at 120% -10%, rgba(155,140,255,.15), transparent 60%), radial-gradient(60rem 60rem at -10% 120%, rgba(110,231,255,.12), transparent 60%), var(--bg);
-      -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
+      margin:0; 
+      font:16px/1.6 system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, "Helvetica Neue", Arial, "Apple Color Emoji","Segoe UI Emoji";
+      color:var(--text); 
+      background:radial-gradient(80rem 80rem at 120% -10%, rgba(155,140,255,.15), transparent 60%), 
+              radial-gradient(60rem 60rem at -10% 120%, rgba(110,231,255,.12), transparent 60%), 
+              var(--bg);
+      background-attachment: fixed; /* <-- Add this line */
+      -webkit-font-smoothing:antialiased; 
+      -moz-osx-font-smoothing:grayscale;
     }
     a{color:inherit; text-decoration:none}
     .container{max-width:1100px; margin:0 auto; padding:24px}
@@ -103,6 +109,26 @@
 
     /* Accessible focus */
     :focus-visible{outline:3px solid rgba(110,231,255,.6); outline-offset:2px}
+
+    .contact-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 16px;
+}
+@media (max-width: 1000px) {
+  .contact-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 720px) {
+  .contact-grid {
+    grid-template-columns: 1fr;
+  }
+}
+.project-card {
+  width: 100%;
+  box-sizing: border-box;
+}
   </style>
 </head>
 <body>
@@ -127,7 +153,7 @@
       <div>
         <h1 class="title" data-reveal>  
            <span class="gradient-text">
-                With increasing commoditization of code through AI, business acumen and understanding B2B client needs matters more than ever for modern SWEs
+                With increasing commoditization of code through AI, business acumen and understanding B2B client needs matters more than ever for modern Engineers
                 </span>
         </h1>
         <p class="subtitle" data-reveal>
@@ -158,7 +184,7 @@
   >
   <img src="assets/ms.png" alt="Microsoft" style="max-height:48px; width:auto; max-width:120px;">
   <!-- ...existing code... -->
-  <img src="assets/mckinsey.svg" alt="McKinsey & Company" style="height:24px; width:auto; max-width:90px; display:block; filter: brightness(0) invert(1);">
+  <img src="assets/McKinsey.svg.png" alt="McKinsey & Company" style="height:24px; width:auto; max-width:90px; display:block; filter: brightness(0) invert(1);">
   <!-- ...existing code... -->
   <img src="assets/siemens.png" alt="Siemens" style="max-height:48px; width:auto; max-width:120px;">
   </div>
@@ -168,7 +194,7 @@
           <div class="kpi"><div class="n">7+</div><div class="l">Markets analyzed (APAC/EU)</div></div>
           <div class="kpi"><div class="n">10x</div><div class="l">Dashboard adoption uplift</div></div>
           <div class="kpi"><div class="n">€3–5M</div><div class="l">Account sizes supported</div></div>
-          <div class="kpi"><div class="n">3</div><div class="l">Languages</div></div>
+          <div class="kpi"><div class="n">3</div><div class="l">Languages (DE/EN/ZH)</div></div>
         </div>
 
 </div>
@@ -262,9 +288,10 @@
 
     <!-- CONTACT -->
     <section id="contact" class="section">
-      <h2>Contact</h2>
-      <p class="lead">Let's grab a (virtual) coffee together!</p>
-      <div class="grid" style="grid-template-columns:repeat(3,1fr); gap:12px">
+  <div class="container">
+    <h2>Contact</h2>
+    <p class="lead">Let's grab a (virtual) coffee together!</p>
+    <div class="contact-grid">
         <a class="project-card" href="mailto:you@example.com" aria-label="Email">
           <strong>✉️ Email</strong>
           <span class="muted">konradkriehmig@hotmail.com</span>
@@ -278,7 +305,8 @@
           <span class="muted">linkedin.com/in/konradkriehmig</span>
         </a>
       </div>
-    </section>
+  </div>
+</section>
     <section id="values" class="section">
       <h2>Values</h2>
       <p class="lead">Integrity - Health - Dedication - Diligence - Composure</p>
