corrected spelling error

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <div>
         <h1 class="title" data-reveal>  
            <span class="gradient-text">
-                With increasing commoditization of code through AI, business acumen and understanding B2B client needs matters more than ever for modern Engineers
+                With increasing commoditization of code through AI, business acumen and understanding B2B client needs matters more than ever for modern engineers
                 </span>
         </h1>
         <p class="subtitle" data-reveal>
