--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="cta-row" data-reveal>
           <a class="btn primary" href="#projects" aria-label="View Projects">View Projects →</a>
           <a class="btn" href="#contact" aria-label="Contact Konrad">Contact</a>
-          <a class="btn" href="#resume" aria-label="Resume">Résumé</a>
+          <a class="btn" href="assets/20250927_CV_Konrad_Kriehmig.pdf" download aria-label="Download CV">Résumé</a>
         </div>
 
       </div>
@@ -210,7 +210,7 @@
           <div class="kpi"><div class="n">7+</div><div class="l">Markets analyzed (APAC/EU)</div></div>
           <div class="kpi"><div class="n">10x</div><div class="l">Dashboard adoption uplift</div></div>
           <div class="kpi"><div class="n">€3–5M</div><div class="l">Account sizes supported</div></div>
-          <div class="kpi"><div class="n">3</div><div class="l">Languages (DE/EN/ZH)</div></div>
+          <div class="n">3</div><div class="l">Languages (DE/EN/ZH)</div></div>
         </div>
 
 </div>
@@ -310,15 +310,15 @@
     <h2>Contact</h2>
     <p class="lead">Let's grab a (virtual) coffee together!</p>
     <div class="contact-grid">
-        <a class="project-card" href="mailto:you@example.com" aria-label="Email">
+        <a class="project-card" href="mailto:konradkriehmig@hotmail.com" aria-label="Email">
           <strong>✉️ Email</strong>
           <span class="muted">konradkriehmig@hotmail.com</span>
         </a>
-        <a class="project-card" href="#" aria-label="GitHub">
+        <a class="project-card" href="https://github.com/konradkriehmig" aria-label="GitHub" target="_blank" rel="noopener">
           <strong>🐙 GitHub</strong>
           <span class="muted">github.com/konradkriehmig</span>
         </a>
-        <a class="project-card" href="linkedin.com/in/konradkriehmig" aria-label="LinkedIn">
+        <a class="project-card" href="https://linkedin.com/in/konradkriehmig" aria-label="LinkedIn" target="_blank" rel="noopener">
           <strong>🔗 LinkedIn</strong>
           <span class="muted">linkedin.com/in/konradkriehmig</span>
         </a>
