--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <div class="kpi"><div class="n">7+</div><div class="l">Markets analyzed (APAC/EU)</div></div>
           <div class="kpi"><div class="n">10x</div><div class="l">Dashboard adoption uplift</div></div>
           <div class="kpi"><div class="n">€3–5M</div><div class="l">Account sizes supported</div></div>
-          <div class="n">3</div><div class="l">Languages (DE/EN/ZH)</div></div>
+          <div class="kpi"><div class="n">3</div><div class="l">Languages (DE/EN/ZH)</div></div>
         </div>
 
 </div>
